更新分类：哲学改为其他

--- a/content/其他-为什么我们需要深度的思考.md
+++ b/content/其他-为什么我们需要深度的思考.md
@@ -2,7 +2,7 @@
 date: '2026-01-27T14:00:00+08:00'
 draft: false
 title: '为什么我们需要深度的思考'
-categories: ['哲学']
+categories: ['其他']
 ---
 
 在这个信息爆炸的时代，我们每天都被大量碎片化的信息包围。
